--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,15 @@ html {
 }
 
 .img-logo{
-    width: 10%;
+    width: 80px;
+   
+}
+
+.imagen-logo{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-left: -12px;
 }
 
 .boton-modal{
@@ -31,12 +39,13 @@ html {
     background-color: white !important;
 }
 
-@media(max-width: 830px){
+@media(max-width: 850px){
     .navbar4{
         font-size: 11px !important;
        
     }
 }
+
 
 @media(max-width: 767px){
     .cabecera{
@@ -53,15 +62,23 @@ html {
          font-size: 10px;
      }
 
+    .navbar4{text-align: center !important;}
+
      .col-6{
         width: 100% !important;
      }
+
+     .imagen-logo{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0px;
+    }
 
      .navbar2{
         display: flex !important;
         justify-content: center !important;}
 
-     .navbar4{text-align: center !important;}
 
      .cabecera{
         justify-content: center !important;
