--- a/css/styles.css
+++ b/css/styles.css
@@ -3,21 +3,46 @@ html {
     margin: 0px;
     padding: 0px;
     height: 100%;
+    
+}
+
+nav{
+    background-image: linear-gradient(to right, #d4af37, #724921);
+}
+
+header{
+    background-image: url(../imagenes/istockphoto-968940310-1024x1024.jpg);
+    width: 100%;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .cabecera{
     display: flex;
     align-items: center;
     justify-content: end;
+    background-image: linear-gradient(to left, #d4af37, #724921);
+}
+
+.texto-login{
+    color: #ebdf9d !important;
 }
 
 .navbar4{
     font-size: 13px;
     margin: 0 auto;
+    
+}
+
+a{
+    color: #ebdf9d !important;
 }
 
 .img-logo{
     width: 80px;
+    background-color: #d4af37;
    
 }
 
@@ -25,14 +50,15 @@ html {
     display: flex;
     align-items: center;
     justify-content: start;
-    margin-left: -12px;
 }
 
 .boton-modal{
-    width: 80px;
+    width: 70px;
     margin: 2px;
     height: 30px;
     font-size: 10px; ;
+    background-color: #d4af37;
+    border-style: none;
 }
 
 .bg-body-tertiary{
@@ -49,9 +75,10 @@ html {
 
 @media(max-width: 767px){
     .cabecera{
-        margin-top: 10px;
+        display: flex;
         align-items: start !important;
         justify-content: end !important;
+        padding-top: 10px;
     }
 }
 
@@ -78,7 +105,6 @@ html {
      .navbar2{
         display: flex !important;
         justify-content: center !important;}
-
 
      .cabecera{
         justify-content: center !important;
