--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,22 @@ nav{
 }
 
 header{
-    background-image: url(../imagenes/istockphoto-968940310-1024x1024.jpg);
     width: 100%;
     height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+}
+
+.header1{
+    background-image: linear-gradient(to right, #d4af37, #724921);
+    color:#fbd24e;
+}
+
+
+.titulo1{
+    font-size: 120px !important;
+}
+
+.titulo2{
+    font-size: 30px;
 }
 
 .cabecera{
@@ -27,7 +37,7 @@ header{
 }
 
 .texto-login{
-    color: #ebdf9d !important;
+    color:  #78340f !important;
 }
 
 .navbar4{
@@ -37,7 +47,7 @@ header{
 }
 
 a{
-    color: #ebdf9d !important;
+    color: #78340f!important;
 }
 
 .img-logo{
@@ -56,9 +66,10 @@ a{
     width: 70px;
     margin: 2px;
     height: 30px;
-    font-size: 10px; ;
-    background-color: #d4af37;
+    font-size: 11px; ;
     border-style: none;
+    background-color: transparent;
+    
 }
 
 .bg-body-tertiary{
@@ -79,6 +90,13 @@ a{
         align-items: start !important;
         justify-content: end !important;
         padding-top: 10px;
+    }
+    .titulo1{
+        font-size: 100px !important;
+    }
+    
+    .titulo2{
+        font-size: 15px;
     }
 }
 
@@ -111,5 +129,12 @@ a{
         flex-wrap: wrap !important;
         
      }
+     .titulo1{
+        font-size: 50px !important;
+    }
+    
+    .titulo2{
+        font-size: 15px;
+    }
 }
 
