--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,12 @@ margin: 0 auto;
     align-items: center;
 }
 
+
+
 .header1{
-    background-image: linear-gradient(to bottom, #dfc2d7, #ca9cbc);
+    background-image: linear-gradient(to right, #d4af37, #724921);
     color:#eddde9;
+    padding-bottom: 5px;
 }
 
 .titulo1{
@@ -83,6 +86,10 @@ a{
     background-color: white !important;
 }
 
+.divfooter{
+    border-left: #724921;
+}
+
 @media(max-width: 850px){
     .navbar4{
         font-size: 11px !important;
@@ -98,7 +105,17 @@ a{
 
 .iconos{
     height: 30px;
-    margin: 0 5px 0 5px;
+    margin: 0;
+}
+
+.iconos2{
+    display: flex;
+    justify-content: space-around;
+}
+
+.iconos3{
+    display: flex;
+    justify-content: space-around;
 }
 
 .tituloredes{
@@ -129,7 +146,9 @@ a{
 
 footer{
     background-image: linear-gradient(to right, #d4af37, #724921);
-    height: 300px;
+    width: 100%;
+    bottom: 0;
+    margin: 0px 0px 0px 0px !important;
 }
 
 @media (max-width: 400px){
