--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,500;1,600;1,800&family=Mulish:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-
-
-
 
 body,
 html {
@@ -85,115 +80,98 @@ border-radius: 50%;
     background-image: linear-gradient(to left, #d4af37, #724921);
 }
 
-.texto-login{
-    color:  #78340f !important;
-}
-
-.navbar4{
+.navbar4{ /*Le da estilos a la lista del menu, tamaño de letra, centrado y grosor de letra*/
     font-size: 13px;
     margin: 0 auto;
     font-weight: bold; 
 }
 
-a{
-    color: #78340f!important;
-}
-
-.img-logo{
+.img-logo{ /*Le da estilos al logo pequeño del menu*/
     width: 80px;
     background-color: #d4af37; 
     border-radius: 50%;
 }
 
-.imagen-logo{
+.imagen-logo{ /*Centra la imagen pequeña del logo del menu cuando esta en el tamaño mas pequeño de pantalla*/
     display: flex;
     align-items: center;
     justify-content: start;
 }
 
-.boton-modal{
+.boton-modal{ /*Le da estilos a los botones de login y registrase del menu principal, en este tambien les pone fondo transparente*/
     width: 70px;
     margin: 2px;
     height: 30px;
     font-size: 11px; ;
+    color:  #78340f !important;
     border-style: none;
     background-color: transparent;
 }
 
-.boton-interno{
-    background-color: #c59b2d;
-    border-color: #c59b2d;
+.boton-interno{ /*Le asigna color a los botones dentro de las ventanas de login y registrarse*/
+    background-color: #c59b2d !important;
+    border-color: #c59b2d !important;
 }
 
-.boton-interno:hover{
+.boton-interno:hover{ /*Hace la transicion de color al pasar el mouse arriba de los botones dentro de las ventas de login y registrarse*/
     background-image: linear-gradient(to bottom, #f4f0cd, #ebdf9d);
 }
 
-.bg-body-tertiary{
+.bg-body-tertiary{ /*No se que hace, pero al borrarlo, me saltan unas advertencias en la consola del navegador*/
     background-color: white !important;
 }
 
-.divfooter{
-
+.divfooter{ /*Le da estilos a las colummnas del footer, en este caso, la raya de separacion y una separacion arriba*/
     border-right: 1px solid #724921;
     padding-top: 10px;
 }
 
-.titulos-footer{
+.titulos-footer{ /*Le da tamaños a los titulos de que estan en el footer*/
     font-size: 30px;
    }
 
-
-.modal-header, .modal-body, .modal-footer {
-
+.modal-header, .modal-body, .modal-footer { /*Le camabia el color de fondo y le coloca bordes al las ventanas de login y registrarse*/
     background-image: linear-gradient(to left, #c59b2d, #f4f0cd);
     border: #724921;
 }
 
-.iconos{
+.iconos{ /*Le da el tamaño a todos los iconos pequeños tanto al principio de la pagina como al footer*/
     height: 30px;
     margin: 0;
 }
 
-.iconos2{
-    display: flex;
-    justify-content: space-around;
+.iconos2{ /*Le da la transcision de aumento y bordes a los iconos de redes sociales del footer*/
     transition: all 0.3s; 
     border-radius: 30%;
 }
 
-.iconos2:hover{
+.iconos2:hover{ /*crea la interaccion al pasar el mouse sobre el icono y le crea una sombra*/
     transform: scale(1.2); /* Ampliar el icono al 120% del tamaño original en hover */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Agregar una sombra con desenfoque */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Agregar una sombra con desenfoque */
 }
 
-.iconos3{
+.iconos3{ /*Ajusta los iconos del princio de la pagina y del footer uno al lado del otro y los separa entre si*/
     display: flex;
     justify-content: space-around;
 }
 
-.tituloredes{
+.tituloredes{ /*Le da estilos al titulo que esta al princio de la pagina, al lado de los iconos de redes sociales*/
     font-size: 13px;
     margin: 5px 0 5px 0;
 }
 
-
-.redessocilaes{
-    font-size: 10px;
-}
-
-.texto-label{
+.texto-label{/*Le da estilo a los texto arriba de los imput en la parte de comentarios del footer, en este caso pega el texto de la barra del imput*/
     margin-bottom: 0px !important;
 }
 
-footer{
+footer{ /*Le da el color degradado al footer, el ancho y los maregenes*/
     background-image: linear-gradient(to right, #d4af37, #724921);
     width: 100%;
     bottom: 0;
     margin: 0px 0px 0px 0px !important;
 }
 
-.boton-flotante{
+.boton-flotante{ /*Le da los estilos al contenedor del logo de ws flotante*/
     position: fixed;
     width: 75px;
     height: 75px;
@@ -207,7 +185,7 @@ footer{
     z-index: 999;
 }
 
-.fa-whatsapp{
+.fa-whatsapp{ /* Le da diseño al logo de ws flotante, el logo de importo de una pagina*/
     font-size: 50px;
     background-color: #25d366;
     border-radius: 50%;
@@ -215,61 +193,85 @@ footer{
     color: white;
 }
 
-.img-cartas{
-    height: 200px;
-    width: auto;
-    box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.500);
-}
-
-.tarjeta2{
+.tarjeta2{ /*Pega las card 2 y 4 a la izquierda de la pagina*/
     margin-left: auto;
 }
 
-.tarjeta1, .tarjeta2{
-    background-color:  #f5eef3;
-}
-
-main{
+main{ /*Le asigno un color de fondo a todo el main*/
     background-color: #f5eef3;
 }
 
-.card-text{
-    text-align: justify;
-}
 
-h3{
-    font-size: 100px;
+h3{ /*Le asigna por defecto un tamaño de letra y un grosor a los titulos H3*/
+    font-size: 80px;
     font-weight: 100;
 }
 
-.imagen-fija-fondo{
+.imagen-fija-fondo{ /*Es la image fija que no se mueve con el scroll, la opcion fixed es la que la hace fija*/
     background-image: url(../imagenes/hermosa-naturaleza-retro-flores.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
     height: 420px;
-    color: white;
+    color: white; /*le da color al texto que esta encima de la imagen*/
 
 }
 
-.img-main{
-    height: 200px;
-    margin: 10px;
+a{ /* Para cambiar el color y quitar la decoracion de los todos los link de la pagina*/
+    color: #78340f!important;
+    text-decoration: none;
+}
+
+.img-main{ /* le da uncho al contedor de las 9 imagenes del main y un margen entre ellas*/
+    width: 300px;
+    margin: 15px;
+}
+    
+    
+
+.img-main-tarjetas{ /*Inserta la imagen en la ultimas 9 tarjetas y le da estilos de tamaño y borde*/
+    background-image: url(../imagenes/hermosa-naturaleza-retro-campo-lavanda.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+    border-radius: 2%;
+}
+
+.tarjetas-centrales{ /*este contendor se encarga de colocar la imagen de las card a la izquierda y el texto a la derecha*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 }
 
+.texto-tarjetas-main{ /*tamaño de letra para los titulos de las ultimas 9 imagenes*/
+    font-size: 30px;
+}
+
+.div-parrafos{
+    width: 25%;   /* Aumenta el width del contedor donde se escribe el parrafo de las card*/
+    margin-left: 15px; /*y le da un manrgen entre la imagen y el texto*/
+}
 
 @media(max-width: 992px){
 
    .titulos-footer{
     font-size: 45px;
    }
+   h3{
+    font-size: 60px;
+    font-weight: 100;
+}
+.parrafos-main{ /*disminuye el tamaño de la letra de los parrafos de las card*/
+    font-size: 10px;
+}
 }
 
 
 @media(max-width: 850px){
-    .navbar4{
+    .navbar4{ /*Le da estilos a la lista del menu, tamaño de letra, centrado y grosor de letra*/
         font-size: 11px !important;
        
     }
@@ -287,8 +289,31 @@ h3{
         font-size: 40px
     }
     h3{
-        font-size: 80px;
+        font-size: 50px;
     }
+
+    .tarjeta2, .tarjeta1{  /*disminuye el tamano de la imagen de las card para esta media*/
+        width: 30rem !important;
+        margin: 0 auto;
+    }
+
+    .tarjetas-centrales{ /* para esta media pasa el texto debajo de las card*/
+        display: block;
+        width: 100% !important;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    .div-parrafos{
+        width: 100%;     /* Aumenta este tamaño el contenedor donde va el texto de las card en el main*/
+        margin-left: 0px;
+    }
+
+    .tarjeta1{
+        margin: 0 auto; /*cetra las card del main para este tamaño del media*/
+    }
+
 }
 
 @media(max-width: 576px){
@@ -315,15 +340,13 @@ h3{
         text-align: center;
     }
     h3{
-        font-size: 50px;
+        font-size: 30px;
     }
-    .img-cartas{
-        height: auto;
-        width: 600px;
-        box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.500);
+  
+    .tarjeta2, .tarjeta1{
+        width: 21rem !important;
     }
 }
-
 
 
 @media (max-width: 400px){
@@ -333,13 +356,13 @@ h3{
          font-size: 10px;
      }
 
-    .navbar4{text-align: center !important;}
+    .navbar4{text-align: center !important;} /*Le da estilos a la lista del menu, tamaño de letra, centrado y grosor de letra, en este caso tambien centra el texto*/
 
      .col-6{
         width: 100% !important;
      }
 
-     .imagen-logo{
+     .imagen-logo{ /*Centra la imagen pequeña del logo cuando esta en el tamaño mas pequeño de pantalla*/
         display: flex;
         align-items: center;
         justify-content: center;
@@ -367,7 +390,10 @@ h3{
     }
 
     .texto-img-fijas{
-    font-size: 15px;
+    font-size: 12px;
+    }
+    .tarjeta2, .tarjeta1{
+        width: 15rem !important;
     }
 }
 
